# qzystudy

./: README.md
base-algorithm-cpp/: Doxyfile
base-algorithm-cpp/test/simple/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libcppunit.la
base-algorithm-cpp/test/simple/.deps/: ExampleTestCase.Po  Main.Po
base-algorithm-cpp/test/simple/autom4te.cache/: output.0  requests  traces.0  traces.1
cairo/: lines.c
cim/: a  captura.c
cpp-design/: a.txt  gen_cpp.py
cpp-design/bridge/: bridge.txt
cpp-design/decorator/: decorator.txt
cpp-design/facade/: facade.txt  facade.txt~
cpp-design/flyweight/: flyweight.txt  flyweight.txt~
cpp-design/mediator/: mediator.txt
cpp-design/memento/: memento.txt
cpp-design/observer/: observer.txt
cpp-design/prototype/: 01102909-2fb6c91ab9874b94ac0d8f6c7e852662.x-png
cpp-design/singleton/: s  singleton.cpp  singleton.h  singleton.txt
cpp-design/templatemethod/: templatemethod.txt  templatemethod.txt~
doxygen/: Doxyfile  a.cpp  a.h
gtk/: Makefile  hsv.c  infobar.c  messagedialog.c
latex/: st1.tex  st10.tex  st11.tex  st2.tex  st3.tex  st4.tex  st5.tex  st6.tex  st6.toc  st7.tex  st8.tex  st9.tex
linux/: mmap.c
python/: hello.py  imagebutton.py  st1.py  st10.py  st11.py  st12.py  st13.py  st14.py  st15.py  st16.py  st17.py  st18.py  st19.py  st2.py  st3.1.py  st3.2.py  st3.py  st4.py  st5.py  st6.py  st7.py  st8.py  st9.py  zw.py
simplefft/: a.txt  aa.c  c.sh  fix_fft.c  fix_fft.h  lines.c
simplefft/alsa/: alsa_read.c
test3d/opengl/: b  bounce.c  colorcube.cpp  cometride.cpp  (+15 more)
(+164 files in other folders)
